# ocr-prototype

./: README.md  correction_interface.py  corrections.db  data_models.py  label_extractor.py  layout_learner.py  main.py  pyproject.toml  visualization.py
